--- a/package.json
+++ b/package.json
@@ -16,12 +16,18 @@
     "isbot": "^3.6.5",
     "prisma": "^4.9.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-beautiful-dnd": "^13.1.1",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
+    "react-dom": "^18.2.0",
+    "uuid": "^9.0.0",
+    "uuidv4": "^6.2.13"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.11.1",
     "@remix-run/eslint-config": "^1.11.1",
     "@types/react": "^18.0.25",
+    "@types/react-beautiful-dnd": "^13.1.3",
     "@types/react-dom": "^18.0.8",
     "eslint": "^8.27.0",
     "typescript": "^4.8.4"
