--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
+    "react-no-ssr": "^1.1.0",
     "uuid": "^9.0.0",
     "uuidv4": "^6.2.13"
   },
